# fix-pyqt5

testgui/: pyproject.toml  requirements.txt
testgui/gui/: gui-tkinter.py  gui.py  guiHome.ui  guiLogin.ui  guiReport.ui  guiSignup.ui  guiUser.ui
