[tool.poetry]
name = "testgui"
version = "0.1.0"
description = ""
authors = ["saadoundhirat <saadoundhirat93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5-tools="^5.15"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
